--- a/Rewrite/Js.conf
+++ b/Rewrite/Js.conf
@@ -1,4 +1,4 @@
-hostname = api.weibo.cn, mapi.weibo.com, *.uve.weibo.com, m.weibo.cn, mp.weixin.qq.com, *.baidu.com, pan.baidu.com, www.zhihu.com, api.zhihu.com, link.zhihu.com, *.zhihu.com,vip1.kuwo.cn, vsco.co, vni.kwaiying.com, account.wps.cn, account.wps.com, ap*.intsig.net, m*.bybutter.com, api.vuevideo.net, api.picsart.c*, api.meiease.c*, ios*.prod.ftl.netflix.com, api.revenuecat.com, pan.baidu.com, license.pdfexpert.com, education.github.com, biz.caiyunapp.com, *.googlevideo.com, s.youtube.com, www.youtube.com, youtubei.googleapis.com, -redirector*.googlevideo.com, *.amemv.com, aweme*.snssdk.com, *.pornhub.com, cn.pornhubpremium.com, buy.itunes.apple.com,notability.com, baimiao.uzero.cn, photos.adobe.io,www.google.cn, www.google.com.hk, testflight.apple.com
+hostname = api.weibo.cn, mapi.weibo.com, *.uve.weibo.com, m.weibo.cn, mp.weixin.qq.com, *.baidu.com, pan.baidu.com, www.zhihu.com, api.zhihu.com, link.zhihu.com, *.zhihu.com,vip1.kuwo.cn, vsco.co, vni.kwaiying.com, account.wps.cn, account.wps.com, ap*.intsig.net, m*.bybutter.com, api.vuevideo.net, api.picsart.c*, api.meiease.c*, ios*.prod.ftl.netflix.com, api.revenuecat.com, pan.baidu.com, license.pdfexpert.com, education.github.com, biz.caiyunapp.com, *.googlevideo.com, s.youtube.com, www.youtube.com, youtubei.googleapis.com, -redirector*.googlevideo.com, *.amemv.com, aweme*.snssdk.com, *.pornhub.com, cn.pornhubpremium.com, buy.itunes.apple.com,notability.com, baimiao.uzero.cn, photos.adobe.io,www.google.cn, www.google.com.hk, api.wfdata.club, icc.one, www.cntv.cn, clientaccess.10086.cn, testflight.apple.com
 
 
 # 微信公众号广告 (By Choler)
@@ -9,6 +9,15 @@ hostname = api.weibo.cn, mapi.weibo.com, *.uve.weibo.com, m.weibo.cn, mp.weixin.
 
 # 大片(Bigshot) 视频编辑器 VIP
 ^https:\/\/vni\.kwaiying\.com\/api\/v1\/user\/profile url script-response-body https://raw.githubusercontent.com/passat/QuanX/main/Scripts/dapian.js
+
+# > 威锋
+^https:\/\/api\.wfdata\.club\/v2\/yesfeng\/(infoCenterAd|yesList) url reject
+
+# > 央视
+^https?+:\/\/www\.cntv\.cn\/nettv\/adp\/ url reject-200
+
+# > 爱阅书香
+^https?:\/\/icc\.one\/iFreeTime\/xid32uxaoecnfv2\/ url reject
 
 # 扫描全能王 pro
 ^https:\/\/(api|api-cs)\.intsig\.net\/purchase\/cs\/query_property\? url script-response-body https://raw.githubusercontent.com/passat/QuanX/main/Scripts/CamScanner.js
@@ -59,6 +68,12 @@ https://api.zhihu.com/v4/questions url script-response-body https://raw.githubus
 ^https?:\/\/api\.zhihu\.com\/topstory\/hot-lists?(\?|\/) url script-response-body https://raw.githubusercontent.com/passat/QuanX/main/Scripts/zhihu_plus.js
 ^https?:\/\/api\.zhihu\.com\/(comment_v5\/)?(answers|comments?|articles|pins)\/\d+\/(root_|child_)?comments? url script-response-body https://raw.githubusercontent.com/passat/QuanX/main/Scripts/zhihu_plus.js
 ^https?:\/\/appcloud2\.zhihu\.com\/v\d+\/config url script-response-body https://raw.githubusercontent.com/passat/QuanX/main/Scripts/zhihu.js
+
+# > 中国移动
+^https?:\/\/gd\.10086\.cn\/gmccfile\/file\/image\/preloading703\/.*.jpg url reject
+^https?+:\/\/clientaccess\.10086\.cn\/biz-orange\/DN\/init\/startInit url reject-200
+^https?+:\/\/wap\.js\.10086\.cn\/jsmccClient\/cd\/market_content\/api\/v\d\/market_content\.page\.query url reject-200
+^https?:\/\/app\.10086\.cn\/biz-orange\/DN\/(findSale|homeSale)\/getsaleAdver url reject
 
 # Bilibili 1080P+ (By NobyDa)
 ^https:\/\/ap(p|i)\.bilibili\.com\/((pgc\/player\/api\/playurl)|(x\/v2\/account\/myinfo\?)|(x\/v2\/account/mine\?)) url script-response-body https://raw.githubusercontent.com/passat/QuanX/main/Scripts/bilifj.js
@@ -133,6 +148,8 @@ https://api.zhihu.com/v4/questions url script-response-body https://raw.githubus
 ^https:\/\/education\.github\.com\/api\/user$ url response-body "student":false response-body "student":true
 
 # WPS (By eHpo)
+^https?:\/\/ios\.wps\.cn\/ad-statistics-service url reject
+^https?+:\/\/mobile-pic\.cache\.iciba\.com\/feeds_ad\/ url reject-200
 ^https://account.wps.cn/api/users/ url script-response-body https://raw.githubusercontent.com/passat/QuanX/main/Scripts/Wps.js
 
 # YouTube去广告
