--- a/Rewrite/Js.conf
+++ b/Rewrite/Js.conf
@@ -10,16 +10,16 @@ hostname = api.weibo.cn, mapi.weibo.com, *.uve.weibo.com, m.weibo.cn, mp.weixin.
 # 大片(Bigshot) 视频编辑器 VIP
 ^https:\/\/vni\.kwaiying\.com\/api\/v1\/user\/profile url script-response-body https://raw.githubusercontent.com/passat/QuanX/main/Scripts/dapian.js
 
-# > 威锋
+# 威锋
 ^https:\/\/api\.wfdata\.club\/v2\/yesfeng\/(infoCenterAd|yesList) url reject
 
-# > 央视
+# 央视
 ^https?+:\/\/www\.cntv\.cn\/nettv\/adp\/ url reject-200
 
 # 云闪付 
 ^https:\/\/wallet\.95516\.com\/s\/wl\/icon\/long url reject
 
-# > 爱阅书香
+# 爱阅书香
 ^https?:\/\/icc\.one\/iFreeTime\/xid32uxaoecnfv2\/ url reject
 
 # 扫描全能王 pro
@@ -68,11 +68,11 @@ https://m\.weibo\.cn/comments/hotflow.*max_id=.* url reject-dict
 # 白描黄金会员
 ^https?:\/\/baimiao\.uzero\.cn\/api\/v\d\.user\/appLaunchWithUser$ url script-response-body https://raw.githubusercontent.com/passat/QuanX/main/Scripts/baimiao.js
 
-# > 中国电信
+# 中国电信
 ^https?:\/\/cloud\.189\.cn\/include\/splash\/ url reject
 ^https?:\/\/zt-app\.go189\.cn\/zt-app\/welcome\/.*?Animation url reject-img
 
-# > 天翼云盘
+# 天翼云盘
 ^https?:\/\/api\.cloud\.189\.cn\/guns\/img\/recommendedPosition\/.*.jpg url reject-200
 ^https?:\/\/cloud\.189\.cn\/include\/splash\/20170512mother\/.*.jpg url reject-200
 
@@ -98,13 +98,13 @@ https://api.zhihu.com/v4/questions url script-response-body https://raw.githubus
 ^https?:\/\/api\.zhihu\.com\/(comment_v5\/)?(answers|comments?|articles|pins)\/\d+\/(root_|child_)?comments? url script-response-body https://raw.githubusercontent.com/passat/QuanX/main/Scripts/zhihu_plus.js
 ^https?:\/\/appcloud2\.zhihu\.com\/v\d+\/config url script-response-body https://raw.githubusercontent.com/passat/QuanX/main/Scripts/zhihu.js
 
-# > 中国移动
+# 中国移动
 ^https?:\/\/gd\.10086\.cn\/gmccfile\/file\/image\/preloading703\/.*.jpg url reject
 ^https?+:\/\/clientaccess\.10086\.cn\/biz-orange\/DN\/init\/startInit url reject-200
 ^https?+:\/\/wap\.js\.10086\.cn\/jsmccClient\/cd\/market_content\/api\/v\d\/market_content\.page\.query url reject-200
 ^https?:\/\/app\.10086\.cn\/biz-orange\/DN\/(findSale|homeSale)\/getsaleAdver url reject
 
-# > gif url reject 只拦截gif格式的图片
+# gif url reject 只拦截gif格式的图片
 ^https:\/\/s3gw.cmbimg.com\/mbappinitads\/.*.(jpg|png) url reject-200
 
 # Bilibili 1080P+ (By NobyDa)
