--- a/Rewrite/Js.conf
+++ b/Rewrite/Js.conf
@@ -182,7 +182,7 @@ https://api.zhihu.com/v4/questions url script-response-body https://raw.githubus
 # WPS (By eHpo)
 ^https?:\/\/ios\.wps\.cn\/ad-statistics-service url reject
 ^https?+:\/\/mobile-pic\.cache\.iciba\.com\/feeds_ad\/ url reject-200
-^https://account.wps.*/api/users/ url script-response-body https://raw.githubusercontent.com/passat/QuanX/main/Scripts/Wps.js
+^https?:\/\/[a-z-]*account\.wps\.c(n|om)(:\d+|)\/api\/users url script-response-body https://raw.githubusercontent.com/passat/QuanX/main/Scripts/Wps.js
 
 # YouTube去广告
 ^https?:\/\/.+\.googlevideo\.com\/.+&oad url reject-img
