--- a/Rewrite/Js.conf
+++ b/Rewrite/Js.conf
@@ -1,4 +1,4 @@
-hostname = api.weibo.cn, mapi.weibo.com, *.uve.weibo.com, m.weibo.cn, mp.weixin.qq.com, *.baidu.com, pan.baidu.com, www.zhihu.com, api.zhihu.com, link.zhihu.com, *.zhihu.com, vip1.kuwo.cn, vsco.co, vni.kwaiying.com, account.wps.cn, account.wps.com, ap*.intsig.net, m*.bybutter.com, api.vuevideo.net, api.picsart.c*, api.meiease.c*, ios*.prod.ftl.netflix.com, api.revenuecat.com, pan.baidu.com, license.pdfexpert.com, education.github.com, biz.caiyunapp.com, *.googlevideo.com, s.youtube.com, www.youtube.com, youtubei.googleapis.com, -redirector*.googlevideo.com, *.amemv.com, aweme*.snssdk.com, *.pornhub.com, cn.pornhubpremium.com, buy.itunes.apple.com, notability.com, baimiao.uzero.cn, photos.adobe.io, www.google.cn, www.google.com.hk, api.wfdata.club, icc.one, www.cntv.cn, clientaccess.10086.cn, s3gw.cmbimg.com, staticsns.cdn.bcebos.com, ndstatic.cdn.bcebos.com, issuecdn.baidupcs.com, cloud.189.cn, api.cloud.189.cn, wallet.95516.com, gab.122.gov.cn, testflight.apple.com
+hostname = api.weibo.cn, mapi.weibo.com, *.uve.weibo.com, m.weibo.cn, mp.weixin.qq.com, *.baidu.com, pan.baidu.com, www.zhihu.com, api.zhihu.com, link.zhihu.com, *.zhihu.com, vip1.kuwo.cn, vsco.co, vni.kwaiying.com, *account.wps.cn, *account.wps.com, ap*.intsig.net, m*.bybutter.com, api.vuevideo.net, api.picsart.c*, api.meiease.c*, ios*.prod.ftl.netflix.com, api.revenuecat.com, pan.baidu.com, license.pdfexpert.com, education.github.com, biz.caiyunapp.com, *.googlevideo.com, s.youtube.com, www.youtube.com, youtubei.googleapis.com, -redirector*.googlevideo.com, *.amemv.com, aweme*.snssdk.com, *.pornhub.com, cn.pornhubpremium.com, buy.itunes.apple.com, notability.com, baimiao.uzero.cn, photos.adobe.io, www.google.cn, www.google.com.hk, api.wfdata.club, icc.one, www.cntv.cn, clientaccess.10086.cn, s3gw.cmbimg.com, staticsns.cdn.bcebos.com, ndstatic.cdn.bcebos.com, issuecdn.baidupcs.com, cloud.189.cn, api.cloud.189.cn, wallet.95516.com, gab.122.gov.cn, testflight.apple.com
 
 
 # 微信公众号广告 (By Choler)
@@ -180,8 +180,8 @@ https://api.zhihu.com/v4/questions url script-response-body https://raw.githubus
 ^https:\/\/education\.github\.com\/api\/user$ url response-body "student":false response-body "student":true
 
 # WPS (By eHpo)
-^https?:\/\/ios\.wps\.cn\/ad-statistics-service url reject
-^https?+:\/\/mobile-pic\.cache\.iciba\.com\/feeds_ad\/ url reject-200
+#^https?:\/\/ios\.wps\.cn\/ad-statistics-service url reject
+#^https?+:\/\/mobile-pic\.cache\.iciba\.com\/feeds_ad\/ url reject-200
 ^https?:\/\/[a-z-]*account\.wps\.c(n|om)(:\d+|)\/api\/users url script-response-body https://raw.githubusercontent.com/passat/QuanX/main/Scripts/Wps.js
 
 # YouTube去广告
