--- a/Rewrite/Js.conf
+++ b/Rewrite/Js.conf
@@ -1,4 +1,4 @@
-hostname = api.weibo.cn, mapi.weibo.com, *.uve.weibo.com, m.weibo.cn, mp.weixin.qq.com, *.baidu.com, pan.baidu.com, www.zhihu.com, api.zhihu.com, link.zhihu.com, *.zhihu.com, vip1.kuwo.cn, vsco.co, vni.kwaiying.com, *account.wps.cn, *account.wps.com, ap*.intsig.net, m*.bybutter.com, api.vuevideo.net, api.picsart.c*, api.meiease.c*, ios*.prod.ftl.netflix.com, api.revenuecat.com, pan.baidu.com, license.pdfexpert.com, education.github.com, biz.caiyunapp.com, *.googlevideo.com, s.youtube.com, www.youtube.com, youtubei.googleapis.com, -redirector*.googlevideo.com, *.amemv.com, aweme*.snssdk.com, *.pornhub.com, cn.pornhubpremium.com, buy.itunes.apple.com, notability.com, baimiao.uzero.cn, photos.adobe.io, www.google.cn, www.google.com.hk, api.wfdata.club, icc.one, www.cntv.cn, clientaccess.10086.cn, s3gw.cmbimg.com, staticsns.cdn.bcebos.com, ndstatic.cdn.bcebos.com, issuecdn.baidupcs.com, cloud.189.cn, api.cloud.189.cn, wallet.95516.com, gab.122.gov.cn, *.bdstatic.com, api.coolapk.com, api-access.pangolin-sdk-toutiao.com, gw.alicdn.com, testflight.apple.com
+hostname = api.weibo.cn, mapi.weibo.com, *.uve.weibo.com, m.weibo.cn, mp.weixin.qq.com, *.baidu.com, pan.baidu.com, www.zhihu.com, api.zhihu.com, link.zhihu.com, *.zhihu.com, vip1.kuwo.cn, vsco.co, vni.kwaiying.com, *account.wps.cn, *account.wps.com, ap*.intsig.net, m*.bybutter.com, api.vuevideo.net, api.picsart.c*, api.meiease.c*, ios*.prod.ftl.netflix.com, api.revenuecat.com, pan.baidu.com, license.pdfexpert.com, education.github.com, biz.caiyunapp.com, *.googlevideo.com, s.youtube.com, www.youtube.com, youtubei.googleapis.com, -redirector*.googlevideo.com, *.amemv.com, aweme*.snssdk.com, *.pornhub.com, cn.pornhubpremium.com, buy.itunes.apple.com, notability.com, baimiao.uzero.cn, photos.adobe.io, www.google.cn, www.google.com.hk, api.wfdata.club, icc.one, www.cntv.cn, clientaccess.10086.cn, s3gw.cmbimg.com, staticsns.cdn.bcebos.com, ndstatic.cdn.bcebos.com, issuecdn.baidupcs.com, cloud.189.cn, api.cloud.189.cn, wallet.95516.com, gab.122.gov.cn, *.bdstatic.com, api.coolapk.com, api-access.pangolin-sdk-toutiao.com, gw.alicdn.com, *.aoscdn.com, testflight.apple.com
 
 
 # 微信公众号广告 (By Choler)
@@ -9,6 +9,9 @@ hostname = api.weibo.cn, mapi.weibo.com, *.uve.weibo.com, m.weibo.cn, mp.weixin.
 
 # 大片(Bigshot) 视频编辑器 VIP
 ^https:\/\/vni\.kwaiying\.com\/api\/v1\/user\/profile url script-response-body https://raw.githubusercontent.com/passat/QuanX/main/Scripts/dapian.js
+
+# 傲软抠图会员权限（2022-09-13）@ddgksf2013
+https?:\/\/.*\.aoscdn\.com\/base\/vip\/client\/authorizations$ url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/apowersoft.js
 
 # 威锋
 ^https:\/\/api\.wfdata\.club\/v2\/yesfeng\/(infoCenterAd|yesList) url reject
