--- a/Rewrite/Js.conf
+++ b/Rewrite/Js.conf
@@ -10,7 +10,7 @@ hostname = api.weibo.cn, mapi.weibo.com, *.uve.weibo.com, m.weibo.cn, mp.weixin.
 # 大片(Bigshot) 视频编辑器 VIP
 ^https:\/\/vni\.kwaiying\.com\/api\/v1\/user\/profile url script-response-body https://raw.githubusercontent.com/passat/QuanX/main/Scripts/dapian.js
 
-# 傲软抠图会员权限（2022-09-13）@ddgksf2013
+# 傲软抠图会员权限（BY ddgksf2013）
 https?:\/\/.*\.aoscdn\.com\/base\/vip\/client\/authorizations$ url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/apowersoft.js
 
 # 威锋
@@ -73,7 +73,7 @@ https?:\/\/.*\.aoscdn\.com\/base\/vip\/client\/authorizations$ url script-respon
 # 微博网页跳转
 https://m\.weibo\.cn/comments/hotflow.*max_id=.* url reject-dict
 
-# 微博应用内广告 (yichahucha)
+# 微博应用内广告 
 ^https?://(sdk|wb)app\.uve\.weibo\.com(/interface/sdk/sdkad.php|/wbapplua/wbpullad.lua) url script-response-body https://raw.githubusercontent.com/passat/QuanX/main/Scripts/Wb_launch.js
 ^https?://m?api\.weibo\.c(n|om)/2/(statuses/(unread|extend|positives/get|(friends|video)(/|_)(mix)?timeline)|stories/(video_stream|home_list)|(groups|fangle)/timeline|profile/statuses|comments/build_comments|photo/recommend_list|service/picfeed|searchall|cardlist|page|!/(photos/pic_recommend_status|live/media_homelist)|video/tiny_stream_video_list|photo/info|remind/unread_count) url script-response-body https://raw.githubusercontent.com/passat/QuanX/main/Scripts/Wb_ad.js
 
