--- a/Rewrite/Js.conf
+++ b/Rewrite/Js.conf
@@ -1,4 +1,4 @@
-hostname = api.weibo.cn, mapi.weibo.com, *.uve.weibo.com, m.weibo.cn, mp.weixin.qq.com, *.baidu.com, pan.baidu.com, www.zhihu.com, api.zhihu.com, link.zhihu.com, *.zhihu.com, vip1.kuwo.cn, vsco.co, vni.kwaiying.com, *account.wps.cn, *account.wps.com, ap*.intsig.net, m*.bybutter.com, api.vuevideo.net, api.picsart.c*, api.meiease.c*, ios*.prod.ftl.netflix.com, api.revenuecat.com, pan.baidu.com, license.pdfexpert.com, education.github.com, biz.caiyunapp.com, *.googlevideo.com, s.youtube.com, www.youtube.com, youtubei.googleapis.com, -redirector*.googlevideo.com, *.amemv.com, aweme*.snssdk.com, *.pornhub.com, cn.pornhubpremium.com, buy.itunes.apple.com, notability.com, baimiao.uzero.cn, photos.adobe.io, www.google.cn, www.google.com.hk, api.wfdata.club, icc.one, www.cntv.cn, clientaccess.10086.cn, s3gw.cmbimg.com, staticsns.cdn.bcebos.com, ndstatic.cdn.bcebos.com, issuecdn.baidupcs.com, cloud.189.cn, api.cloud.189.cn, wallet.95516.com, gab.122.gov.cn, *.bdstatic.com, api.coolapk.com, api-access.pangolin-sdk-toutiao.com, gw.alicdn.com, *.aoscdn.com, api.sortedapp.com, api.revenuecat.com, subscription-api.notedapp.io, api.meiyan.com, testflight.apple.com
+hostname = api.weibo.cn, mapi.weibo.com, *.uve.weibo.com, m.weibo.cn, mp.weixin.qq.com, *.baidu.com, pan.baidu.com, www.zhihu.com, api.zhihu.com, link.zhihu.com, *.zhihu.com, vip1.kuwo.cn, vsco.co, vni.kwaiying.com, *account.wps.cn, *account.wps.com, ap*.intsig.net, m*.bybutter.com, api.vuevideo.net, api.picsart.c*, api.meiease.c*, ios*.prod.ftl.netflix.com, api.revenuecat.com, pan.baidu.com, license.pdfexpert.com, education.github.com, biz.caiyunapp.com, *.googlevideo.com, s.youtube.com, www.youtube.com, youtubei.googleapis.com, -redirector*.googlevideo.com, *.amemv.com, aweme*.snssdk.com, *.pornhub.com, cn.pornhubpremium.com, buy.itunes.apple.com, notability.com, baimiao.uzero.cn, photos.adobe.io, www.google.cn, www.google.com.hk, api.wfdata.club, icc.one, www.cntv.cn, clientaccess.10086.cn, s3gw.cmbimg.com, staticsns.cdn.bcebos.com, ndstatic.cdn.bcebos.com, issuecdn.baidupcs.com, cloud.189.cn, api.cloud.189.cn, wallet.95516.com, gab.122.gov.cn, *.bdstatic.com, api.coolapk.com, api-access.pangolin-sdk-toutiao.com, gw.alicdn.com, *.aoscdn.com, api.sortedapp.com, api.revenuecat.com, subscription-api.notedapp.io, api.meiyan.com, fufei.fengyunsoft.cn, testflight.apple.com
 
 
 # 微信公众号广告 (By Choler)
@@ -99,6 +99,9 @@ https://m\.weibo\.cn/comments/hotflow.*max_id=.* url reject-dict
 
 # 美颜相机 解锁VIP
 ^https:\/\/api\.meiyan\.com\/vip\/user_info\.json url script-response-body https://raw.githubusercontent.com/89996462/Quantumult-X/main/ycdz/myxj.js
+
+# 最美证件照 解锁VIP
+^https:\/\/fufei\.fengyunsoft\.cn\/api\/client\/info url script-response-body https://raw.githubusercontent.com/89996462/Quantumult-X/main/ycdz/zmzjz.js
 
 # 知乎防跳转
 ^https?:\/\/www\.zhihu\.com url request-header (\r\n)User-Agent:.+(\r\n) request-header $1User-Agent: Mozilla/5.0 (iPhone; CPU iPhone OS 13_5 like Mac OS X) AppleWebKit/605.1.15 (KHTML, like Gecko) Version/13.1.1 Mobile/15E148 Safari/16C50 Quark/604.1 T7/10.3 SearchCraft/2.6.3 (Baidu; P1 8.0.0)$2
