--- a/Rewrite/Js.conf
+++ b/Rewrite/Js.conf
@@ -70,8 +70,7 @@ https?:\/\/.*\.aoscdn\.com\/base\/vip\/client\/authorizations$ url script-respon
 ^https:\/\/buy\.itunes\.apple\.com\/verifyReceipt url script-response-body https://raw.githubusercontent.com/passat/QuanX/main/Scripts/Proknockout.js
 
 # Scanner Pro (By ddgksf2013)
-^https?:\/\/api\.revenuecat\.com\/v\d\/subscribers\/(\$RCAnonymousID\%)?(\w)+$ url script-response-body https://raw.githubusercontent.com/passat/QuanX/main/Scripts/ScannerPro.js
-^https?:\/\/api\.revenuecat\.com\/v\d\/receipts$ url script-response-body https://raw.githubusercontent.com/passat/QuanX/main/Scripts/ScannerPro.js
+^https?:\/\/api\.revenuecat\.com\/v1\/(receipts|subscribers\/\$RCAnonymousID%3A\w{32})$ url script-response-body https://raw.githubusercontent.com/passat/QuanX/main/Scripts/ScannerPro.js
 
 # Sorted
 ^https:\/\/api\.sortedapp\.com\/receipts\/verify url script-response-body https://raw.githubusercontent.com/passat/QuanX/main/Scripts/Sorted.js
